# noir-compilation

./: Cargo.toml  README.md
noir_project/: Nargo.toml
src/: main.rs
