[package]
name = "noir-compilation"
version = "0.1.0"
edition = "2021"

[dependencies]
nargo = { git = "https://github.com/noir-lang/noir.git" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir.git" }
nargo_toml = { git = "https://github.com/noir-lang/noir.git" }
noirc_driver = { git = "https://github.com/noir-lang/noir.git", features = ["bn254"] }
noirc_errors = { git = "https://github.com/noir-lang/noir.git" }
noirc_frontend = { git = "https://github.com/noir-lang/noir.git", features = ["bn254"] }
acvm = { git = "https://github.com/noir-lang/noir.git", features = ["bn254"] }
fm = { git = "https://github.com/noir-lang/noir.git" }
rayon = "1.10.0"
termcolor = "1.4.1"
